--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,23 @@
 			<version>${version.mapstruct-lombok}</version>
 		</dependency>
 
-    </dependencies>
+		<!-- Open API -->
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-data-rest -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-data-rest</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+ 		<!-- -->
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
